# advent_of_code

./: .gitignore  README.md
2016/day01/: day01.rb
2016/day02/: day02.rb
2016/day03/: day03.rb
2016/day04/: day04_part1.rb  day04_part2.rb
2016/day05/: day05_part1.rb
2016/day06/: day06_part1.rb
2016/day07/: day07.rb  sample.txt
2016/day08/: day08_p1.rb
2016/day10/: day10.rb
2016/day12/: day12.rb
2017/day01/: day01.rb
2017/day02/: day02.rb
2017/day04/: day04.rb
2017/day05/: day05.rb
2017/day09/: day09.rb
2017/day11/: day11.rb  sample.txt
2017/day12/: day12.cr
2017/day13/: day13.rb
2017/day18/: day18.rb
2017/day20/: day20.rb  sample.txt
2017/day25/: day25.py  sample.txt
2018/day01/: day01.rb
2018/day02/: day02.rb
2018/day03/: day03.rb
2018/day04/: day04.py
2018/day05/: day05.rb
2018/day06/: day06.rb
2018/day07/: day07.rb
2018/day09/: sample.txt
2018/day10/: day10.nim  day10.rb
2018/day15/: sample.txt
2018/day16/: day16.rb
2018/day18/: results.txt
2018/day19/: day19.c
2018/day25/: day25.rb
2019/day01/: day01.rb
2019/day02/: day02.rb
2019/day03/: day03.rb  sample1.txt  sample2.txt
2019/day04/: day04.rb
2019/day06/: day06.rb
2019/day08/: day08.rb
2019/day09/: day09.rb
2019/day10/: day10.rb
2019/day16/: sample.txt
2020/day01/day01_rust/: Cargo.toml
2020/day01/day01_rust/benches/: benchmark.rs
2020/day01/day01_rust/src/: lib.rs  main.rs
2020/day06/: day06.rb
2020/day07/: day07.rb
2020/day08/: day08.nim
2020/day09/: day09.rb
2020/day10/: day10p1.rb
utils/: rdtsc.d
(+186 files in other folders)
