[package]
name = "day01_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "day01"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4.0"


[[bench]]
name = "benchmark"
harness = false
